--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.16
 
     - name: Build
-      run: go build -v ./...
+      run: go build -o mdtoc ./cmd/mdtoc/main.go
 
     - name: Test
       run: go test -v ./...
